@@ -414,6 +414,12 @@ init|=
 literal|null
 decl_stmt|;
 specifier|private
+name|boolean
+name|isLogInfoEnabled
+init|=
+literal|false
+decl_stmt|;
+specifier|private
 specifier|final
 name|ExecMapperContext
 name|execContext
@@ -454,6 +460,13 @@ operator|.
 name|getMax
 argument_list|()
 argument_list|)
+expr_stmt|;
+name|isLogInfoEnabled
+operator|=
+name|l4j
+operator|.
+name|isInfoEnabled
+argument_list|()
 expr_stmt|;
 try|try
 block|{
@@ -1078,10 +1091,7 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
-name|l4j
-operator|.
-name|isInfoEnabled
-argument_list|()
+name|isLogInfoEnabled
 condition|)
 block|{
 name|numRows
@@ -1328,10 +1338,7 @@ block|}
 block|}
 if|if
 condition|(
-name|l4j
-operator|.
-name|isInfoEnabled
-argument_list|()
+name|isLogInfoEnabled
 condition|)
 block|{
 name|long
